logout button added

--- a/client/index.html
+++ b/client/index.html
@@ -92,7 +92,7 @@
             </form>
           </div>
           <div id="right-side-second" class="rs-first">
-            <a href="/#/signin" class="btn"><span class="bi bi-person-circle"></span></a>
+            <a href="/#/signin" class="btn"><span class="bi bi-person-circle" id="login_span"></span><span class="logout_span">Logout</span></a>
             <div class="spread-elements-span"></div>
             <a href="/#/cart" class="btn shopping-cart-link">
               <span class="bi bi-cart4">
